--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="light-m-button">
+                    <!-- <li class="light-m-button">
                         <a class="page-scroll nav-title" onclick="lightMode()" href="#lightmode">Light</a>
                     </li>
                     <li class="dark-m-button" style="display: none;">
@@ -82,7 +82,7 @@
                     </li>
                     <li class="en-button" style="display: none;">
                         <a class="page-scroll nav-title" onclick="toENG()" href="#engmode">EN</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
