--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
                         <h3 class="text-center" style="color: #acacac;">Your name:</h3>
                         <h3 class="renderName text-center" style="color: #9c27b0;"></h3>
                     </div>
-                    <div class="modal_email" style="display: flex; width: 80%; justify-content: space-around;margin-left: 10%;">
+                    <div class="modal_email" style="display: block; width: 80%; justify-content: space-around;margin-left: 10%;">
                         <h3 class="text-center" style="color: #acacac;">Your email:</h3>
                         <h3 class="renderEmail text-center" style="color: #9c27b0;"></h3>
                     </div>
