--- a/index.html
+++ b/index.html
@@ -18,17 +18,7 @@
     <link href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.1/animate.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
-    <link rel="stylesheet" href="./extension.css">
     <link rel="stylesheet" href="./style.css">
-    <script>
-        window.console = window.console || function (t) {};
-    </script>
-    <script>
-        if (document.location.search.match(/type=embed/gi)) {
-            window.parent.postMessage("resize", "*");
-        }
-    </script>
-
 </head>
 
 <body translate="no">
@@ -68,18 +58,6 @@
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="light-m-button">
-                        <a class="page-scroll nav-title" onclick="lightMode()" href="#lightmode">Light</a>
-                    </li>
-                    <li class="dark-m-button" style="display: none;">
-                        <a class="page-scroll nav-title" onclick="darkMode()" href="#darkmode">Dark</a>
-                    </li>
-                    <li class="ru-button">
-                        <a class="page-scroll nav-title" onclick="toRU()" href="#rumode">RU</a>
-                    </li>
-                    <li class="en-button" style="display: none;">
-                        <a class="page-scroll nav-title" onclick="toENG()" href="#engmode">EN</a>
-                    </li>
                     <li>
                         <a data-toggle="modal" data-target="#alertLogin" class="page-scroll nav-title profile-name"
                             href="#"></a>
@@ -105,14 +83,7 @@
                     <h2 class="margin-top-0 text-primary about-title" style="color: #9c27b0;">Hi!</h2>
                     <br>
                     <p style="color: rgba(245,245,245,0.7);" id="about-text">
-                        My name is... Ibrohim I am a few years old, I have been interested in programming for over 3
-                        years
-                        and I am currently a Full-Stack developer
-
-                        I know languages like JavaScript, NodeJS And Im a Student
-                        ...
-
-
+                        Results-driven Web Full-Stack Developer with 4 years of experience delivering high-quality, user-friendly web applications. Proficient in both front-end and back-end development, I combine technical expertise with a strong eye for design and usability. I am passionate about crafting efficient, scalable, and visually appealing solutions that meet client objectives.
                     </p>
                     <a href="#three" class="btn btn-default btn-xl page-scroll about-btn">Watch my projects</a>
                 </div>
@@ -577,7 +548,7 @@
             </div>
             <br />
             <span class="pull-right text-muted small"><a href="https://t.me/ibroxim_KHasanov">Portfolio by
-                    Khasanov Ibrohim</a> ©2022 - v5.0 Developer Beta</span>
+                    Khasanov Ibrohim</a> ©2023 - v6.1</span>
         </div>
     </footer>
     <div id="galleryModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
