--- a/index.html
+++ b/index.html
@@ -69,18 +69,18 @@
     <header id="first">
         <div class="header-content">
             <div class="inner intro-box">
-                <h1 class="cursive intro-title" id="intro-title">Khasanov Ibrohim's Portfolio</h1>
-                <h4 class="intro-text" id="intro-text">Future is alredy here! Open your eyes, And look!</h4>
+                <h1 class="cursive intro-title" id="intro-title">Khasanov Ibrohim</h1>
+                <h4 class="intro-text" id="intro-text">Full-Stack Developer</h4>
                 <hr>
                 <a href="#one" class="btn btn-primary btn-xl page-scroll about-stil intro-button">About Me</a>
             </div>
         </div>
     </header>
-    <section class="about-section" id="one" style="background-color: #333;">
+    <section class="about-section" id="one" style="background-color: #070F2B">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 text-center about-box">
-                    <h2 class="margin-top-0 text-primary about-title" style="color: #9c27b0;">Hi!</h2>
+                    <h2 class="margin-top-0 text-primary about-title" style="color: #9290C3">Hi!</h2>
                     <br>
                     <p style="color: rgba(245,245,245,0.7);" id="about-text">
                         Results-driven Web Full-Stack Developer with 2 years of experience delivering high-quality, user-friendly web applications. Proficient in both front-end and back-end development, I combine technical expertise with a strong eye for design and usability. I am passionate about crafting efficient, scalable, and visually appealing solutions that meet client objectives.
@@ -90,10 +90,10 @@
             </div>
         </div>
     </section>
-    <aside class="bg-dark" id="skills" style="background-color: #222;">
+    <aside class="bg-dark" id="skills" style="background-color: #13133a">
         <div class="container text-center">
             <div class="call-to-action">
-                <h2 class="text-primary">My Skills</h2>
+                <h2 class="text-primary" style="color: #9290C3;">My Skills</h2>
             </div>
             <br>
             <hr />
@@ -198,10 +198,10 @@
             </div>
         </div>
     </aside>
-    <section id="three" class="no-padding">
+    <section id="three" class="no-padding" style="background-color: #070F2B; padding-bottom: 30px;">
         <div class="container-fluid">
-            <div class="row no-gutter" id="threee" style="background-color: #222222;">
-                <h2 class="text-primary" style="text-align: center; margin-bottom: 40px;">My Projects</h2>
+            <div class="row no-gutter" id="threee">
+                <h2 class="text-primary" style="text-align: center; margin-bottom: 40px; color: #9290C3;">My Projects</h2>
                 <div style="padding: 5px;" class="col-lg-4 col-sm-6 yangiimg projects-1-box">
                     <h2 class="text-primary" style="text-align: center; margin-bottom: 40px; font-size: 20px;"><a
                             style="color: white;" href="https://matrass-1.netlify.app/">Mattresses</a></h2>
@@ -261,9 +261,9 @@
                 </div>
                 <div style="padding: 5px;" class="col-lg-4 col-sm-6 projects-5-box">
                     <h2 class="text-primary" style="text-align: center; margin-bottom: 40px; font-size: 20px;"><a
-                            style="color: white;" href="https://kbm-animals-clinic.netlify.app/">Vet Clinic</a></h2>
-                    <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="./img/vetfull.jpg">
-                        <img src="./img/vet.png" class="img-responsive" alt="Image 5">
+                            style="color: white;" href="https://simplechocolate.netlify.app/">SimpleChocolate</a></h2>
+                    <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="./img/chocolatefull.png">
+                        <img src="./img/chocolate.jpg" class="img-responsive" alt="Image 5">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
@@ -291,11 +291,11 @@
             </div>
         </div>
     </section>
-    <section id="two">
+    <section id="two" style="background-color: #13133a">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="margin-top-0 text-primary">My Tools</h2>
+                    <h2 class="margin-top-0 text-primary" style="color: #9290C3;">My Tools</h2>
                     <hr class="primary">
                 </div>
             </div>
@@ -347,31 +347,31 @@
             </div>
         </div>
     </section>
-    <section class="contact" id="last">
+    <section class="contact" id="last" style="background-color: #1B1A55;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="margin-top-0 wow fadeIn">Contact me</h2>
+                    <h2 class="margin-top-0 wow fadeIn" style="color: white;">Contact me</h2>
                     <hr class="primary">
-                    <p>Follow me!</p>
+                    <p style="color: white;">Follow me!</p>
                 </div>
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <form class="contact-form row">
                         <div class="col-md-4">
                             <label></label>
-                            <input type="text" class="form-control" id="nameInp" placeholder="Name, Surname">
+                            <input type="text" style="background-color: #070F2B;" class="form-control" id="nameInp" placeholder="Name, Surname">
                         </div>
                         <div class="col-md-4">
                             <label></label>
-                            <input type="text" class="form-control" id="emailInp" placeholder="Email">
+                            <input type="text" style="background-color: #070F2B;" class="form-control" id="emailInp" placeholder="Email">
                         </div>
                         <div class="col-md-4">
                             <label></label>
-                            <input type="text" class="form-control" id="phoneInp" placeholder="Phone">
+                            <input type="text" style="background-color: #070F2B;" class="form-control" id="phoneInp" placeholder="Phone">
                         </div>
                         <div class="col-md-12">
                             <label></label>
-                            <textarea class="form-control" rows="9" id="descInp"
+                            <textarea style="background-color: #070F2B;" class="form-control" rows="9" id="descInp"
                                 placeholder="Your message here.."></textarea>
                         </div>
                         <div class="col-md-4 col-md-offset-4">
@@ -385,7 +385,7 @@
             </div>
         </div>
     </section>
-    <section class="registered" style="display: none;" id="last">
+    <section class="registered" style="display: none;" id="last" style="background-color: #535C91;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -396,32 +396,32 @@
             </div>
         </div>
     </section>
-    <footer class="footer" id="footer">
+    <footer class="footer" id="footer" style="background-color: #070F2B;">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-xs-6 col-sm-3 column">
                     <h4>Information</h4>
                     <ul class="list-unstyled">
-                        <li><a href="#first">Intro</a></li>
-                        <li><a href="#skills">Skills</a></li>
-                        <li><a href="#three">Projects</a></li>
-                        <li><a href="#two">My Tools</a></li>
+                        <li><a style="color: #9290C3;" href="#first">Intro</a></li>
+                        <li><a style="color: #9290C3;" href="#skills">Skills</a></li>
+                        <li><a style="color: #9290C3;" href="#three">Projects</a></li>
+                        <li><a style="color: #9290C3;" href="#two">My Tools</a></li>
                     </ul>
                 </div>
                 <div class="col-xs-6 col-sm-3 column">
                     <h4>About</h4>
                     <ul class="list-unstyled">
-                        <li><a href="#last">Contact Us</a></li>
-                        <li><a href="#four">Features</a></li>
-                        <li><a href="#one">About</a></li>
-                        <li><a data-toggle="modal" data-target="#aboutModal">More About Me</a></li>
+                        <li><a style="color: #9290C3;" style="color: #9290C3;" href="#last">Contact Us</a></li>
+                        <li><a style="color: #9290C3;" href="#four">Features</a></li>
+                        <li><a style="color: #9290C3;" href="#one">About</a></li>
+                        <li><a style="color: #9290C3;" data-toggle="modal" data-target="#aboutModal">More About Me</a></li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-3 column">
                     <h4>Fallow me!</h4>
                     <form>
                         <div class="form-group">
-                            <input type="text" class="form-control" title="No spam, we promise!"
+                            <input type="text"  style="background-color: #1B1A55;" class="form-control" title="No spam, we promise!"
                                 placeholder="Tell me your email">
                         </div>
                         <div class="form-group">
@@ -441,7 +441,7 @@
                                         stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none"
                                         font-size="none" text-anchor="none" style="mix-blend-mode: normal">
                                         <path d="M0,172v-172h172v172z" fill="none"></path>
-                                        <g id="original-icon" fill="#9c27b0">
+                                        <g id="original-icon" fill="#535C91">
                                             <path
                                                 d="M152.65672,20.59297c-1.67545,0.0735 -3.30631,0.53981 -4.77703,1.12875c-1.4557,0.585 -9.83633,4.16201 -22.21219,9.45328c-12.37586,5.29127 -28.46355,12.18162 -44.41094,19.01406c-31.89478,13.66489 -63.23688,27.11015 -63.23688,27.11015l0.22844,-0.08735c0,0 -1.89166,0.63231 -3.80953,1.9686c-0.95894,0.66814 -1.9906,1.53072 -2.83531,2.78828c-0.84471,1.25756 -1.46225,3.0398 -1.22953,4.92485c0.81742,6.62112 7.67953,8.49922 7.67953,8.49922l0.02688,0.01344l30.62406,10.48125c0.78079,2.60471 9.2884,31.00016 11.15985,37.0136c1.03356,3.32465 2.00094,5.24249 3.01,6.55078c0.50495,0.6547 1.03413,1.16135 1.61922,1.53188c0.23248,0.1472 0.47697,0.25766 0.7189,0.3561c0.00516,0.00229 0.00828,-0.00227 0.01344,0c0.02973,0.01311 0.05769,0.01429 0.08734,0.02687l-0.08062,-0.02015c0.05621,0.0227 0.11169,0.06091 0.16797,0.08062c0.10918,0.03827 0.17608,0.03694 0.31578,0.06719c3.50723,1.22457 6.40969,-1.04812 6.40969,-1.04812l0.12094,-0.09406l18.8125,-17.44859l30.53,23.80453l0.38297,0.17469c5.34388,2.37273 10.17661,1.04897 12.85297,-1.12875c2.67636,-2.17773 3.72891,-4.98531 3.72891,-4.98531l0.11422,-0.29562l22.4339,-116.92641c0.57404,-2.6159 0.6556,-4.87706 0.11422,-6.92031c-0.54138,-2.04325 -1.85671,-3.81943 -3.50719,-4.80391c-1.65047,-0.98448 -3.37705,-1.30304 -5.0525,-1.22953zM152.83813,27.58719c0.68044,-0.03151 1.18478,0.04627 1.34375,0.14109c0.15897,0.09482 0.23034,0.08234 0.38297,0.65844c0.15263,0.5761 0.23528,1.78951 -0.18141,3.68859l-0.01344,0.04031l-22.30625,116.24781c-0.0528,0.11703 -0.51763,1.19239 -1.5789,2.05594c-1.08266,0.88095 -2.2868,1.56861 -5.4825,0.22844l-33.38547,-26.03516l-0.94062,-0.73906l-0.02015,0.02015l-9.98406,-7.4914l56.10828,-66.01172c0.88075,-1.03354 1.07117,-2.48845 0.48606,-3.71384c-0.58511,-1.22539 -1.83626,-1.99197 -3.19372,-1.95679c-0.6493,0.01687 -1.28057,0.21719 -1.82078,0.57781l-81.18937,54.12625l-30.67109,-10.50141c0,0 -3.04563,-1.69483 -3.19141,-2.87562c-0.00808,-0.06543 -0.04405,-0.0062 0.11422,-0.24188c0.15826,-0.23561 0.55608,-0.63342 1.05484,-0.98094c0.99752,-0.69503 2.13656,-1.11531 2.13656,-1.11531l0.11422,-0.04031l0.11422,-0.04703c0,0 31.34373,-13.44597 63.23687,-27.11016c15.94657,-6.83209 32.03143,-13.71739 44.40422,-19.00734c12.36961,-5.2886 21.30757,-9.09529 22.06438,-9.39953c0.8616,-0.34502 1.71815,-0.48583 2.3986,-0.51734zM115.62969,64.64781l-42.54984,50.0614l-0.02016,0.02015c-0.06643,0.07998 -0.1292,0.16293 -0.18812,0.2486c-0.0675,0.0931 -0.13029,0.18952 -0.18813,0.2889c-0.23906,0.40574 -0.39227,0.85624 -0.45015,1.3236c-0.00003,0.00896 -0.00003,0.01792 0,0.02688l-5.54297,24.92656c-0.09215,-0.26931 -0.15668,-0.36784 -0.25531,-0.68531v-0.00672c-1.76055,-5.65695 -9.78727,-32.43649 -10.89781,-36.14015zM77.88375,122.91281l7.64594,5.73781l-11.23375,10.41406z">
                                             </path>
@@ -456,7 +456,7 @@
                                         stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none"
                                         font-size="none" text-anchor="none" style="mix-blend-mode: normal">
                                         <path d="M0,172v-172h172v172z" fill="none"></path>
-                                        <g id="original-icon" fill="#9c27b0">
+                                        <g id="original-icon" fill="#535C91">
                                             <path
                                                 d="M78.11667,15.05c-32.96667,3.58333 -59.48333,30.1 -63.06667,62.35c-3.58333,33.68333 15.76667,63.78333 45.15,75.25c2.15,0.71667 4.3,-0.71667 4.3,-3.58333v-11.46667c0,0 -2.86667,0.71667 -6.45,0.71667c-10.03333,0 -14.33333,-8.6 -15.05,-13.61667c-0.71667,-2.86667 -2.15,-5.01667 -4.3,-7.16667c-2.15,-0.71667 -2.86667,-0.71667 -2.86667,-1.43333c0,-1.43333 2.15,-1.43333 2.86667,-1.43333c4.3,0 7.88333,5.01667 9.31667,7.16667c3.58333,5.73333 7.88333,7.16667 10.03333,7.16667c2.86667,0 5.01667,-0.71667 6.45,-1.43333c0.71667,-5.01667 2.86667,-10.03333 7.16667,-12.9c-16.48333,-3.58333 -28.66667,-12.9 -28.66667,-28.66667c0,-7.88333 3.58333,-15.76667 8.6,-21.5c-0.71667,-1.43333 -1.43333,-5.01667 -1.43333,-10.03333c0,-2.86667 0,-6.45 1.43333,-9.31667c0,-1.43333 1.43333,-2.15 2.15,-2.15h0.71667c3.58333,0.71667 10.75,2.86667 17.2,9.31667c4.3,-1.43333 9.31667,-2.15 14.33333,-2.15c5.01667,0 10.03333,0.71667 14.33333,2.15c6.45,-6.45 14.33333,-8.6 17.91667,-9.31667h0.71667c1.43333,0 2.15,0.71667 2.86667,2.15c0,2.86667 0,6.45 0,9.31667c0,5.73333 -0.71667,8.6 -1.43333,10.03333c5.01667,5.73333 8.6,12.9 8.6,21.5c0,15.76667 -12.18333,25.08333 -28.66667,28.66667c4.3,3.58333 7.16667,10.03333 7.16667,16.48333v18.63333c0,2.15 2.15,4.3 5.01667,3.58333c26.51667,-10.75 45.15,-36.55 45.15,-66.65c0,-43 -36.55,-76.68333 -79.55,-71.66667z">
                                             </path>
@@ -468,7 +468,7 @@
                                     stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none"
                                     text-anchor="none" style="mix-blend-mode: normal">
                                     <path d="M0,172v-172h172v172z" fill="none"></path>
-                                    <g id="original-icon" fill="#9c27b0">
+                                    <g id="original-icon" fill="#535C91">
                                         <path
                                             d="M86,17.2c-37.9948,0 -68.8,30.8052 -68.8,68.8c0,32.23853 22.19947,59.21387 52.12747,66.67867c-0.32107,-0.9288 -0.52747,-2.00667 -0.52747,-3.34253v-11.75907c-2.79213,0 -7.47053,0 -8.64587,0c-4.70707,0 -8.8924,-2.02387 -10.922,-5.78493c-2.2532,-4.1796 -2.64307,-10.57227 -8.22733,-14.4824c-1.65693,-1.30147 -0.3956,-2.7864 1.5136,-2.58573c3.526,0.9976 6.45,3.41707 9.202,7.00613c2.74053,3.5948 4.03053,4.40893 9.1504,4.40893c2.48253,0 6.19773,-0.14333 9.69507,-0.69373c1.88053,-4.77587 5.13133,-9.17333 9.10453,-11.2488c-22.9104,-2.3564 -33.84387,-13.75427 -33.84387,-29.22853c0,-6.66213 2.838,-13.1064 7.65973,-18.53587c-1.5824,-5.38933 -3.57187,-16.38013 0.60773,-20.56547c10.30853,0 16.54067,6.68507 18.03707,8.49107c5.13707,-1.76013 10.77867,-2.75773 16.70693,-2.75773c5.93973,0 11.60427,0.9976 16.7528,2.7692c1.4792,-1.79453 7.71707,-8.50253 18.04853,-8.50253c4.1968,4.19107 2.1844,15.22773 0.5848,20.6056c4.79307,5.418 7.61387,11.84507 7.61387,18.49573c0,15.4628 -10.91627,26.85493 -33.79227,29.2228c6.2952,3.2852 10.8876,12.51587 10.8876,19.4704v15.67493c0,0.59627 -0.13187,1.02627 -0.20067,1.53653c26.80907,-9.39693 46.06733,-34.85293 46.06733,-64.87267c0,-37.9948 -30.8052,-68.8 -68.8,-68.8z">
                                         </path>
@@ -483,7 +483,7 @@
                                         stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none"
                                         font-size="none" text-anchor="none" style="mix-blend-mode: normal">
                                         <path d="M0,172v-172h172v172z" fill="none"></path>
-                                        <g fill="#9c27b0">
+                                        <g fill="#535C91">
                                             <path
                                                 d="M86,13.76l-72.24,45.9025v52.66156l72.24,45.91594l72.24,-45.9025v-52.675zM86,100.39156l-20.41156,-14.14969l20.41156,-13.92125l20.41156,13.92125zM92.88,60.56281v-26.3375l46.19813,29.36094l-20.70719,14.35125zM79.12,60.56281l-25.49094,17.37469l-20.70719,-14.35125l46.19812,-29.36094zM41.6025,86.14781l-14.0825,9.59437v-19.36344zM53.56188,94.43875l25.55812,17.72406v25.61187l-46.13094,-29.32062zM92.88,112.16281l25.55813,-17.72406l20.57281,14.01531l-46.13094,29.32062zM130.3975,86.14781l14.0825,-9.76906v19.36344z">
                                             </path>
@@ -494,8 +494,8 @@
                 </div>
             </div>
             <br />
-            <span class="pull-right text-muted small"><a href="https://t.me/ibroxim_KHasanov">Portfolio by
-                    Khasanov Ibrohim</a> ©2023 - v6.1</span>
+            <span class="pull-right text-muted small" style="color: #535C91;"><a style="color: #9290C3;" href="https://t.me/ibrohim_KHasanov">Portfolio by
+                    Khasanov Ibrohim</a> ©2024 - v7.1</span>
         </div>
     </footer>
     <div id="galleryModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
